--- a/assets/css/common/styles.css
+++ b/assets/css/common/styles.css
@@ -21,13 +21,23 @@ button {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid #00B0E3;;
 }
 
 .header h1 {
-    color: #FEEE03;
+    color: #E0E418;
     font-size: 20px;
     font-weight: 700;
+}
+
+.header__hamburger {
+    display: none;
+    font-size: 20px;
+}
+
+.header__close {
+    display: none;
+    color: #000;
+    font-size: 20px;
 }
 
 .header__listnav {
@@ -60,7 +70,7 @@ button {
     height: 600px;
 }
 
-.sobre-jogo__container {
+.about-the-game__container {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -73,21 +83,21 @@ button {
     border-radius: 66%;
 }
 
-.sobre-jogo__texto {
+.about-the-game__text {
     margin-left: 100px;
     display: flex;
     flex-direction: column;
     gap: 50px;
 }
 
-.sobre-jogo__texto h3 {
+.about-the-game__text h3 {
     color: #fff;
     font-weight: 700;
     font-size: 20px;
     margin-bottom: 10px;
 }
 
-.sobre-jogo__texto--second h3 {
+.about-the-game__text--second h3 {
     text-align: end;
 }
 
@@ -131,7 +141,7 @@ button {
     border: 3px solid rgba(4, 90, 97, 0.5);
     border-radius: 5px;
     min-height: 100px;
-    max-width: 200px;
+    width: 200px;
     padding: 10px;
 }
 
@@ -155,7 +165,6 @@ button {
 .random-character__image {
     max-height: 200px;
     border-radius: 50%;
-    border: 3px solid #00B0E3;
     margin: 15px 0;
 }
 
@@ -208,16 +217,12 @@ button {
     justify-content: space-between;
 }
 
-.the-world__image-container {
-    max-width: 33%;
+.the-world__image {
+    width: 33%;
     cursor: pointer;
 }
 
-.the-world__image {
-    width: 100%;
-}
-
-.modal-image-container {
+.modal {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -231,10 +236,10 @@ button {
 }
 
 .modal-image {
-    max-width: 65vw;
+    width: 65vw;
 }
 
-.invisivel {
+.invisible {
     display: none;
 }
 
@@ -243,21 +248,174 @@ button {
     min-height: 50px;
     display: flex;
     align-items: center;
-    justify-content: center;
-    gap: 20px;
+    justify-content: space-between;
 }
 
 .footer p {
-    font-size: 14px;
+    font-size: 12px;
+}
+
+.footer__info {
+    display: flex;
+    gap: 20px;
+}
+
+.footer__icons {
+    display: flex;
+    gap: 20px;
+}
+
+.footer__link {
+    color: #81F9D4;
 }
 
 .fa-brands {
     font-size: 20px;
     color: #ccc;
     transition: all 0.2s;
-    margin-right: 20px;
 }
 
 .fa-brands:hover {
     color: #fff;
+}
+
+@media screen and (max-width: 1024px) {
+    main p {
+        font-size: 14px;
+    }
+
+    .container {
+        padding: 0 20px;
+    }
+
+    .header {
+        position: relative;
+    }
+
+    .header h1 {
+        font-size: 16px;
+        width: 150px;
+        text-align: center;
+    }
+
+    .header__hamburger {
+        display: block;
+    }
+
+    .header__nav {
+        position: fixed;
+        height: 100vh;
+        width: 50%;
+        z-index: 99;
+        top: 0;
+        right: -1000px;
+        background: #4FB9A0;
+        box-shadow: 5px -10px 30px 5px #000;
+        padding: 20px;
+        transition: all 0.2s;
+    }
+
+    .header__listnav {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .header__close {
+        display: block;
+    }
+
+    .header__listnav--item {
+        margin-top: 20px;
+    }
+
+    .nav-link {
+        color: #000;
+        font-size: 18px;
+    }
+
+    .show-nav-mobile {
+        right: 0;
+    }
+
+    .video-trailer {
+        padding: 0;
+    }
+
+    .video-trailer-container {
+        margin-top: 20px;
+        margin-bottom: 0;
+        padding: 0;
+    }
+
+    .video-trailer-container iframe {
+        width: 100vw;
+        height: 200px;
+    }
+
+    .about-the-game__container {
+        flex-direction: column;
+        padding: 15px;
+    }
+
+    .raz-img-container {
+        display: none;
+    }
+
+    .about-the-game__raz-img {
+        width: 170px;
+    }
+
+    .about-the-game__text {
+        margin-top: 10px;
+        margin-left: 0;
+        width: 100%;
+    }
+
+    .wrapper {
+        flex-direction: column;
+    }
+
+    .wrapper-text {
+        width: 100%;
+        order: -1;
+    }
+
+    .modal-image {
+        width: 100vw;
+    }
+
+    .the-world__images {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .the-world__image {
+        width: 100%;
+    }
+
+    .video-trailer-psychonauts2 {
+        margin-top: 5px;
+        margin-bottom: 10px;
+    }
+
+    .footer {
+        flex-direction: column;
+        padding: 5px 0;
+    }
+
+    .footer p {
+        font-size: 9px;
+    }
+
+    .footer__info {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 0;
+    }
+
+    .fa-brands {
+        font-size: 14px;
+    }
 }
