--- a/assets/css/characters/characters.css
+++ b/assets/css/characters/characters.css
@@ -41,15 +41,25 @@
     margin: 15px 0;
 }
 
-.modal-character-container {
+.modal__box {
     background: rgb(15, 88, 71);
     min-width: 300px;
-    padding: 35px;
+    border-radius: 8px;
+}
+
+.modal__close {
+    font-size: 24px;
+    color: #000;
+    padding: 10px 0 0 10px;
+    cursor: pointer;
+}
+
+.modal-character-container {
+    padding: 0 35px 35px 35px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-radius: 8px;
 }
 
 .modal-character__name {
@@ -103,9 +113,17 @@
         margin: 0 auto;
     }
 
-    .modal-character-container {
+    .modal__box {
         background: rgba(15, 88, 71, 0.9);
         width: 100vw;
         border-radius: 0;
+    }
+
+    .modal-character__image {
+        height: 200px;
+    }
+
+    .modal-character__link {
+        font-size: 14px;
     }
 }
