--- a/assets/css/psi-powers/psi-powers.css
+++ b/assets/css/psi-powers/psi-powers.css
@@ -46,15 +46,25 @@
     margin-bottom: 20px;
 }
 
-.modal-psi-power-container {
+.modal__box {
     background: rgb(15, 88, 71);
     min-width: 300px;
-    padding: 35px;
+    border-radius: 8px;
+}
+
+.modal__close {
+    font-size: 24px;
+    color: #000;
+    padding: 10px 0 0 10px;
+    cursor: pointer;
+}
+
+.modal-psi-power-container {
+    padding: 0 35px 35px 35px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-radius: 8px;
 }
 
 .modal-psi-power__name {
@@ -109,9 +119,13 @@
         grid-template-columns: 1fr;
     }
 
-    .modal-psi-power-container {
+    .modal__box {
         background: rgba(15, 88, 71, 0.9);
         width: 100vw;
         border-radius: 0;
+    }
+
+    .modal-psi-power__link {
+        font-size: 14px;
     }
 }
