--- a/assets/css/characters/characters.css
+++ b/assets/css/characters/characters.css
@@ -48,10 +48,14 @@
 }
 
 .modal__close {
-    font-size: 24px;
+    font-size: 20px;
     color: #000;
     padding: 10px 0 0 10px;
     cursor: pointer;
+}
+
+.modal__close:active {
+    color: #fff;
 }
 
 .modal-character-container {
